# bruh

./: CMakeLists.txt  README.md
include/: DemanglePass.h  Demangler.h  Detrampoline.h  DetrampolinePass.h  Detrampoliner.h  ModulePrinter.hpp  SlotTracker.h  StringResolver.h  StringResolverManager.h  logging.h
src/: BruhASMWriter.cpp  DemanglePass.cpp  Demangler.cpp  Demangler.cpp.orig  Detrampoline.cpp  DetrampolinePass.cpp  Detrampoliner.cpp  ModulePrinter.cpp  StringResolver.cpp  main.cpp
test/: main-proc.ll  main.ll
test/cpp/: main-proc.ll  main.bc  main.cpp  main.ll
test/objc/: main  main-proc.ll  main.bc  main.ll  main.m
test/rust/: main  main-proc.ll  main.bc  main.ll  main.rs
test/swift/: main-proc.ll  main.bc  main.ll  main.swift
